--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@
 hs_err_pid*
 /target/
 
+.idea/aws.xml
+.idea/compiler.xml
+.idea/encodings.xml
+.idea/jarRepositories.xml
+.idea/misc.xml
+.idea/vcs.xml
